deployment_conf/dev/deployment-backend-api-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend-api-dev
  namespace: namespace-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      run: deployment-backend-api-dev
  template:
    metadata:
      labels:
        run: deployment-backend-api-dev
    spec:
      containers:
      - name: fireworks-api-dev
        image: gcr.io/wms-dev-237319/backend-api-dev:base
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: api-http
