deployment_conf/dev/service-backend-api-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-backend-api-dev
  namespace: namespace-dev
  labels:
   app: deployment-backend-api-dev
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    run: deployment-backend-api-dev
  type: NodePort
